# naver_store

./: .gitignore  README.md  ai.sh  database.py  docker-compose.yml  pyproject.toml  run.sh  scraping.sh  slack.py
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
envs/: environments.py
gemini/: ai.py  embedding.py  rag.py  vectorstore.py
google_sheets/: naver_data_lab.py  temu_data.py
scripts/: test.sh
tests/: test_add.py
