[project]
name = "naver-store-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.32.0",
    "gspread>=6.2.1",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.1",
    "selenium>=4.35.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "ruff==0.8.2",
    "types-psycopg2>=2.9.21.20250809",
    "types-requests>=2.32.4.20250809",
]

[tool.ruff]
target-version = "py313"

# TODO: pydantic 사용시 추가 예정
[tool.mypy]
#plugins = ["pydantic.mypy"]
python_version = 3.13
strict = true

[tool.coverage.run]
omit = ["*/test_*.py"]

# TODO: asyncio 사용시 추가 예정
#[tool.pytest.ini_options]
#asyncio_mode = "auto"
#asyncio_default_fixture_loop_scope = "session"